# ghost

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TECHNICAL_BRIEF.md  critical-vulnerabilities-2025-2026.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  clear_false_criticals.py  entrypoint.sh  generate_real_scenarios.py  pyproject.toml  seed.py  seed_expanded.py  seed_sentinel.py
backend/alembic/versions/: 001_initial.py  002_vulnerability_scans.py  003_attack_chain.py  004_puzzles.py  005_puzzle_games.py  006_sentinel_game.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  alert.py  analysis.py  finding.py  package.py  puzzle.py  sentinel.py  version.py  vulnerability.py  vulnerability_scan.py
backend/app/routers/: alerts.py  analyses.py  findings.py  health.py  packages.py  puzzles.py  scan.py  sentinel.py  versions.py  vulnerabilities.py  vulnerability_scans.py  webhooks.py
backend/app/schemas/: alert.py  analysis.py  finding.py  package.py  puzzle.py  sentinel.py  version.py  vulnerability.py  vulnerability_scan.py
backend/app/services/: alerting.py  ingestion.py
backend/app/services/analysis/: agent.py  deep_analysis.py  dependency_analysis.py  models.py  pipeline.py  synthesis.py  triage.py
backend/app/services/analysis/prompts/: deep_analysis.py  synthesis.py  (+1 more)
backend/app/services/audit/: pipeline.py  worker_client.py
backend/app/services/diff/: generator.py
backend/app/services/registry/: __init__.py  base.py  github.py  npm.py  pypi.py
backend/app/utils/: diff_utils.py  llm.py  tarball.py
(+44 files in other folders)
